# simple_ingest

./: Dockerfile  LICENSE  README.md  pyproject.toml  warehouse.db
coffeebeans-de-assignment/: README.md  warehouse.db
coffeebeans-de-assignment/coffeebeans_dataeng_exercise/: ingest.py  outliers.py
coffeebeans-de-assignment/docs/: calculating_outliers.tex
coffeebeans-de-assignment/tests/: ingest_test.py  outliers_test.py
coffeebeans-de-assignment/tests/resources/: outliers.jsonl  test_warehouse.db
coffeebeans_dataeng_exercise/: ingest.py  outliers.py
coffeebeans_dataeng_exercise/batch/: batch_factory.py  batch_job.py
coffeebeans_dataeng_exercise/constants/: constants.py
coffeebeans_dataeng_exercise/db/: db.py  outliers_schema_manager.py  schema_factory.py  schema_manager.py  votes_schema_manager.py  warehouse.db
coffeebeans_dataeng_exercise/db/sql/: create_outlier_view.sql  create_schema.sql  create_votes_table.sql  drop_table.sql  insert_into_votes_table.sql  reader.py
coffeebeans_dataeng_exercise/ingest_jobs/: ingest_data.py
coffeebeans_dataeng_exercise/outlier_jobs/: detect_outlier.py
coffeebeans_dataeng_exercise/scripts/: exercise.py
tests/: db_test.py  ingest_test.py  outliers_test.py
tests/db/: db_test.py
tests/exercise_tests/: test_ingestion.py  test_outliers.py
tests/resources/: outliers.jsonl  test_warehouse.db  uniform_votes.jsonl  votes.jsonl
