[tool.poetry]
name = "coffeebeans_dataeng_exercise"
version = "0.1.0"
description = "The Python version of the Client data engineering challenge"
authors = ["Client <data@client.com>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
typer = "^0.9.0"
duckdb = "^1.0.0"
dask = {extras = ["distributed"], version = "^2024.6.2"}


[tool.poetry.group.dev.dependencies]
rope = "^1.8.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
autopep8 = "^2.0.2"
types-requests = "^2.31.0.1"


[tool.poetry.scripts]
exercise = "coffeebeans_dataeng_exercise.scripts.exercise:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["__init__.py", "exercise.py", "fetch_data.py"]
